# blepo

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: CNAME  SPECIFICATIONS.md  index.html
site/: index.html
src/: main.rs
src/application/: ports.rs  use_cases.rs
src/domain/: channel.rs  video.rs
src/infrastructure/: config.rs  fallback_fetcher.rs  json_store.rs  mod.rs  mpv_player.rs  rss_fetcher.rs  shorts_checker.rs  ytdlp_fetcher.rs
src/presentation/: cli.rs
tests/: rss_parsing.rs  ytdlp_parsing.rs
tests/fixtures/expected/: parsed_videos.json  ytdlp_parsed_videos.json
tests/fixtures/input/: sample_feed.xml  ytdlp_channel_output.jsonl
